--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     -->
     <groupId>uk.ac.ebi.pride.proteomes.pipeline</groupId>
     <artifactId>pride-proteomes-data-unifier</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <name>PRIDE Proteomes Pipeline</name>
     <description>This package contains the pipeline for the PRIDE Proteomes database.</description>
@@ -30,10 +30,10 @@
     </licenses>
 
     <scm>
-        <connection>scm:svn:https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pipeline/tags/pride-proteomes-data-unifier-1.0.0</connection>
-        <developerConnection>scm:svn:https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pipeline/tags/pride-proteomes-data-unifier-1.0.0
+        <connection>scm:svn:https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pipeline/trunk</connection>
+        <developerConnection>scm:svn:https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pipeline/trunk
         </developerConnection>
-        <url>https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pride-proteomes/pipeline/tags/pride-proteomes-data-unifier-1.0.0</url>
+        <url>https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pride-proteomes/pipeline</url>
     </scm>
 
     <properties>
