Updates the pipeline to the latest database schema. Adds a snall script to generate files for the groups.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent> <!-- parent POM -->
         <groupId>uk.ac.ebi.pride.maven</groupId>
         <artifactId>pride-base-master</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.3</version>
     </parent>
 
     <!--
@@ -40,12 +40,13 @@
         <!-- UTF-8 encoding to generate the build-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring.batch.version>2.2.1.RELEASE</spring.batch.version>
-        <spring.data.version>1.4.3.RELEASE</spring.data.version>
-        <hibernate.version>4.1.7.Final</hibernate.version>
-        <proteomes.db.core.version>1.0.0</proteomes.db.core.version>
+        <spring.version>4.0.9.RELEASE</spring.version>
+        <spring.batch.version>2.2.7.RELEASE</spring.batch.version>
+        <hibernate.version>4.3.6.Final</hibernate.version>
+        <hibernate.validator>4.3.0.Final</hibernate.validator>
+        <proteomes.db.core.version>1.0.2-SNAPSHOT</proteomes.db.core.version>
         <commons.dbcp.version>1.4</commons.dbcp.version>
-        <commons.io.version>2.4</commons.io.version>
+        <!--<commons.io.version>2.4</commons.io.version>-->
         <hsql.version>2.3.1</hsql.version>
 
     </properties>
@@ -194,11 +195,11 @@
             <artifactId>hsqldb</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons.io.version}</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>commons-io</groupId>-->
+        <!--<artifactId>commons-io</artifactId>-->
+        <!--<version>${commons.io.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>commons-dbcp</groupId>
@@ -211,7 +212,37 @@
             <artifactId>oracle-thin</artifactId>
         </dependency>
 
+        <!-- logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!--test-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit-dep</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
+
     </dependencies>
+
 
 
     <repositories>
