Updates the script to run local the pipeline and fixes a dependency problem.

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,18 @@
                     <groupId>log4j</groupId>
                     <artifactId>log4j</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpcore</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpmime</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -325,13 +337,6 @@
             </releases>
             <snapshots>
             </snapshots>
-        </repository>
-
-        <!-- Biojava repo -->
-        <repository>
-            <id>biojava-maven-repo</id>
-            <name>BioJava repository</name>
-            <url>http://www.biojava.org/download/maven/</url>
         </repository>
 
     </repositories>
