--- a/src/main/resources/prop/pride-proteomes-oracle.properties
+++ b/src/main/resources/prop/pride-proteomes-oracle.properties
@@ -1,4 +1,4 @@
 prot.pipeline.db.jdbc.driver=${pride.jdbc.driver}
-prot.pipeline.jdbc.url=${pride.test.jdbc.url}
+prot.pipeline.jdbc.url=${pride.dev.jdbc.url}
 prot.pipeline.jdbc.user=${pride.proteomes.db.user}
 prot.pipeline.jdbc.password=${pride.proteomes.db.password}
