--- a/pom.xml
+++ b/pom.xml
@@ -29,21 +29,12 @@
         </license>
     </licenses>
 
-    <scm>
-        <connection>scm:svn:https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pipeline/trunk</connection>
-        <developerConnection>scm:svn:https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pipeline/trunk
-        </developerConnection>
-        <url>https://svn.ebi.ac.uk/pride-repo/pride-proteomes/pride-proteomes/pipeline</url>
-    </scm>
-
     <properties>
         <!-- UTF-8 encoding to generate the build-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <proteomes.db.core.version>1.0.2-SNAPSHOT</proteomes.db.core.version>
-        <proteomes.indexer.version>0.0.2-SNAPSHOT</proteomes.indexer.version>
-        <proteomes.index.service.version>0.0.2-SNAPSHOT</proteomes.index.service.version>
+        <proteomes.indexer.version>1.0.0</proteomes.indexer.version>
 
         <spring.version>3.2.13.RELEASE</spring.version>
         <spring.batch.version>2.2.7.RELEASE</spring.batch.version>
@@ -81,8 +72,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <!-- maven dependency plugin -->
@@ -220,39 +211,23 @@
             </exclusions>
         </dependency>
 
-        <!-- proteomes repo -->
-        <dependency>
-            <groupId>uk.ac.ebi.pride.proteomes.db</groupId>
-            <artifactId>db-core</artifactId>
-            <version>${proteomes.db.core.version}</version>
-        </dependency>
+        <!-- proteomes repo: dependency provided by indexer -->
 
-        <!--Noe: I added manually the dependency because in other case is not added to the claspath-->
-        <!--TODO: Investigate the problem with the dependency-->
-        <dependency>
-            <groupId>org.noggit</groupId>
-            <artifactId>noggit</artifactId>
-            <version>0.5</version>
-        </dependency>
-
-        <!-- proteomes index service -->
-        <dependency>
-            <groupId>uk.ac.ebi.pride.proteomes</groupId>
-            <artifactId>index-service</artifactId>
-            <version>${proteomes.index.service.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!-- proteomes index service: dependency provided by indexer-->
 
         <!-- proteomes indexer -->
         <dependency>
             <groupId>uk.ac.ebi.pride.proteomes</groupId>
             <artifactId>indexer</artifactId>
             <version>${proteomes.indexer.version}</version>
+        </dependency>
+
+        <!--Noe: I added manually the dependency because in other case is not added to the classpath-->
+        <!--TODO: Investigate the problem with the dependency-->
+        <dependency>
+            <groupId>org.noggit</groupId>
+            <artifactId>noggit</artifactId>
+            <version>0.5</version>
         </dependency>
 
         <!-- uniprot java client beta version. Is using solr 5 so it is not compatible -->
@@ -265,7 +240,7 @@
         <dependency>
             <groupId>uk.ac.ebi.uniprot.kraken</groupId>
             <artifactId>uniprotjapi</artifactId>
-            <version>2015.08</version>
+            <version>2015.09</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -330,32 +305,41 @@
     </dependencies>
 
     <repositories>
-
-        <!-- EBI repo -->
         <repository>
-            <id>nexus-ebi-repo</id>
-            <name>The EBI internal repository</name>
+            <id>nexus-ebi-repo-old</id>
             <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo/</url>
-            <releases>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
         </repository>
-
-        <!-- EBI SNAPSHOT repo -->
+        <repository>
+            <id>nexus-ebi-release-repo</id>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
+        </repository>
         <repository>
             <id>nexus-ebi-snapshot-repo</id>
-            <name>The EBI internal snapshot repository</name>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo-snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-            </snapshots>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
         </repository>
-
     </repositories>
 
+    <!--scm git config-->
+    <scm>
+        <connection>scm:git:github.com/PRIDE-Proteomes/data-unifier-pipeline.git</connection>
+        <developerConnection>scm:git:git@github.com:PRIDE-Proteomes/data-unifier-pipeline.git</developerConnection>
+        <url>https://github.com/PRIDE-Proteomes/data-unifier-pipeline.git</url>
+        <tag>HEAD</tag>
+    </scm>
 
+    <distributionManagement>
+        <!-- EBI repo -->
+        <repository>
+            <id>pst-release</id>
+            <name>EBI Nexus Repository</name>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
+        </repository>
+        <!-- EBI SNAPSHOT repo -->
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>pst-snapshots</id>
+            <name>EBI Nexus Snapshots Repository</name>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
