--- a/src/test/resources/prop/data-unifier-override.properties
+++ b/src/test/resources/prop/data-unifier-override.properties
@@ -1,8 +1,5 @@
-protein.group.file.dir=src/test/resources/groups/entry/
-gene.group.file.dir=src/test/resources/groups/gene/
-fasta.file.dir=src/test/resources/fasta/
-protein.group.file.prefix=entry-groups-
-protein.group.file.postfix=-test
+gene.group.file.dir=${project.basedir}/src/test/resources/groups/gene/
+fasta.file.dir=${project.basedir}/src/test/resources/fasta/
 gene.group.file.prefix=gene-groups-
 gene.group.file.postfix=-test
 protein.fasta.file.prefix=uniprot-taxonomy-
