Removes and cleans dependencies and code (using automatic formater).

--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
     <parent> <!-- parent POM -->
-        <groupId>uk.ac.ebi.pride.maven</groupId>
-        <artifactId>pride-base-master</artifactId>
-        <version>1.0.3</version>
+        <groupId>uk.ac.ebi.pride.proteomes.maven</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
-
     <!--
         profiles
         development: db-pride-repo-pridetst, db-pride-proteomes-prideprot-rw-user
@@ -28,21 +26,17 @@
         </license>
     </licenses>
 
+
+    <!--scm git config-->
+    <scm>
+        <connection>scm:git:github.com/PRIDE-Proteomes/data-unifier-pipeline.git</connection>
+        <developerConnection>scm:git:git@github.com:PRIDE-Proteomes/data-unifier-pipeline.git</developerConnection>
+        <url>https://github.com/PRIDE-Proteomes/data-unifier-pipeline.git</url>
+        <tag>HEAD</tag>
+    </scm>
+
     <properties>
-        <!-- UTF-8 encoding to generate the build-->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
         <proteomes.indexer.version>1.0.1-SNAPSHOT</proteomes.indexer.version>
-
-        <spring.version>3.2.13.RELEASE</spring.version>
-        <spring.batch.version>2.2.7.RELEASE</spring.batch.version>
-        <solrj.version>4.10.1</solrj.version>
-        <hibernate.version>4.3.6.Final</hibernate.version>
-        <hibernate.validator>4.3.0.Final</hibernate.validator>
-        <commons.dbcp.version>1.4</commons.dbcp.version>
-        <hsql.version>2.3.1</hsql.version>
-
     </properties>
 
     <developers>
@@ -72,15 +66,6 @@
             </testResource>
         </testResources>
         <plugins>
-            <!--compiler-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
             <!-- maven dependency plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -149,74 +134,8 @@
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.batch</groupId>
-            <artifactId>spring-batch-core</artifactId>
-            <version>${spring.batch.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.batch</groupId>
-            <artifactId>spring-batch-infrastructure</artifactId>
-            <version>${spring.batch.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.batch</groupId>
-            <artifactId>spring-batch-test</artifactId>
-            <version>${spring.batch.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
-        <!-- Solr test framework -->
-        <dependency>
-            <groupId>org.apache.solr</groupId>
-            <artifactId>solr-test-framework</artifactId>
-            <version>${solrj.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-jdk14</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpcore</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpmime</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.noggit</groupId>
-                    <artifactId>noggit</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
 
         <!-- proteomes repo: dependency provided by indexer -->
-
         <!-- proteomes index service: dependency provided by indexer-->
 
         <!-- proteomes indexer -->
@@ -224,14 +143,6 @@
             <groupId>uk.ac.ebi.pride.proteomes</groupId>
             <artifactId>indexer</artifactId>
             <version>${proteomes.indexer.version}</version>
-        </dependency>
-
-        <!--Noe: I added manually the dependency because in other case is not added to the classpath-->
-        <!--TODO: Investigate the problem with the dependency-->
-        <dependency>
-            <groupId>org.noggit</groupId>
-            <artifactId>noggit</artifactId>
-            <version>0.5</version>
         </dependency>
 
         <!-- uniprot java client beta version. Is using solr 5 so it is not compatible -->
@@ -244,7 +155,7 @@
         <dependency>
             <groupId>uk.ac.ebi.uniprot.kraken</groupId>
             <artifactId>uniprotjapi</artifactId>
-            <version>2015.11</version>
+            <version>RELEASE</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -258,8 +169,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-core</artifactId>
         </dependency>
 
         <dependency>
@@ -288,6 +199,7 @@
             <artifactId>log4j-over-slf4j</artifactId>
             <version>1.7.10</version>
         </dependency>
+
         <!--test-->
         <dependency>
             <groupId>junit</groupId>
@@ -306,44 +218,27 @@
             <artifactId>mockito-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Spring batch test framework -->
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Solr test framework -->
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-test-framework</artifactId>
+            <version>${solrj.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
-    <repositories>
-        <repository>
-            <id>nexus-ebi-repo-old</id>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo/</url>
-        </repository>
-        <repository>
-            <id>nexus-ebi-release-repo</id>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
-        </repository>
-        <repository>
-            <id>nexus-ebi-snapshot-repo</id>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
-        </repository>
-    </repositories>
-
-    <!--scm git config-->
-    <scm>
-        <connection>scm:git:github.com/PRIDE-Proteomes/data-unifier-pipeline.git</connection>
-        <developerConnection>scm:git:git@github.com:PRIDE-Proteomes/data-unifier-pipeline.git</developerConnection>
-        <url>https://github.com/PRIDE-Proteomes/data-unifier-pipeline.git</url>
-        <tag>HEAD</tag>
-    </scm>
-
-    <distributionManagement>
-        <!-- EBI repo -->
-        <repository>
-            <id>pst-release</id>
-            <name>EBI Nexus Repository</name>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
-        </repository>
-        <!-- EBI SNAPSHOT repo -->
-        <snapshotRepository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>pst-snapshots</id>
-            <name>EBI Nexus Snapshots Repository</name>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
