--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,31 @@
 
     <parent> <!-- parent POM -->
         <groupId>uk.ac.ebi.pride.proteomes.maven</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0.1</version>
+        <artifactId>proteomes-maven-parent</artifactId>
+        <version>1.0.0</version>
     </parent>
-    <!--
-        profiles
-        development: db-pride-repo-pridetst, db-pride-proteomes-prideprot-rw-user
-        production: pride-proteomes
-    -->
+
     <groupId>uk.ac.ebi.pride.proteomes.pipeline</groupId>
-    <artifactId>data-unifier-pipeline</artifactId>
+    <artifactId>proteomes-pipeline-data-unifier</artifactId>
     <version>1.0.1-SNAPSHOT</version>
+
     <name>PRIDE Proteomes Data Unifier Pipeline</name>
     <description>This package contains the pipeline for the PRIDE Proteomes database.</description>
-    <url>http://www.ebi.ac.uk/pride</url>
+
+    <!--
+        To build and run the project maven profiles are needed:
+            pride-proteomes
+    -->
+
+    <developers>
+        <developer>
+            <name>PRIDE Developer</name>
+            <id>pride-support@ebi.ac.uk</id>
+            <email>pride-support@ebi.ac.uk</email>
+            <organization>Proteomics Services Team, EMBL - European Bioinformatics Institute</organization>
+        </developer>
+    </developers>
+
     <licenses>
         <license>
             <name>The Apache Software License 2.0</name>
@@ -26,6 +37,10 @@
         </license>
     </licenses>
 
+    <organization>
+        <name>EMBL - European Bioinformatics Institute</name>
+        <url>http://www.ebi.ac.uk</url>
+    </organization>
 
     <!--scm git config-->
     <scm>
@@ -36,21 +51,8 @@
     </scm>
 
     <properties>
-        <proteomes.indexer.version>1.0.1-SNAPSHOT</proteomes.indexer.version>
+        <proteomes.indexer.version>1.0.0-SNAPSHOT</proteomes.indexer.version>
     </properties>
-
-    <developers>
-        <developer>
-            <name>PRIDE Developer</name>
-            <id>pride-support@ebi.ac.uk</id>
-            <email>pride-support@ebi.ac.uk</email>
-            <organization>Proteomics Services Team, EMBL - European Bioinformatics Institute</organization>
-        </developer>
-    </developers>
-    <organization>
-        <name>EMBL - European Bioinformatics Institute</name>
-        <url>http://www.ebi.ac.uk</url>
-    </organization>
 
     <build>
         <resources>
@@ -140,8 +142,8 @@
 
         <!-- proteomes indexer -->
         <dependency>
-            <groupId>uk.ac.ebi.pride.proteomes</groupId>
-            <artifactId>indexer</artifactId>
+            <groupId>uk.ac.ebi.pride.proteomes.index</groupId>
+            <artifactId>proteomes-index-indexer</artifactId>
             <version>${proteomes.indexer.version}</version>
         </dependency>
 
