At it can't resolve the property before go inside the tasklet, we will use a listener to load the properties and we will pass the property name to the tasklet and we will look the value of the property it in the stepExecution, where the listener loads the properties.

--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
                 <directory>src/test/resources</directory>
                 <filtering>true</filtering>
                 <excludes>
-                    <exclude>**/fasta</exclude>
-                    <exclude>**/groups</exclude>
+                    <exclude>fasta/**</exclude>
+                    <exclude>groups/**</exclude>
                 </excludes>
             </testResource>
         </testResources>
