First version of release report for peptide to protein mapping information.

--- a/src/main/resources/prop/data-unifier.properties
+++ b/src/main/resources/prop/data-unifier.properties
@@ -6,3 +6,7 @@ protein.fasta.file.prefix=uniprot-taxonomy-
 protein.fasta.file.postfix=-complete
 contaminant.fasta.file.prefix=contaminant-
 contaminant.fasta.file.postfix=-complete
+
+output.file.dir=/nfs/pride/work/proteomes/data-unifier/output/
+peptide.mapping.report.prefix=peptide-protein-mapping-
+peptide.mapping.report.postfix=
