--- a/src/test/resources/prop/data-unifier-override.properties
+++ b/src/test/resources/prop/data-unifier-override.properties
@@ -6,3 +6,6 @@ protein.fasta.file.prefix=uniprot-taxonomy-
 contaminant.fasta.file.prefix=contaminant-
 protein.fasta.file.postfix=-test
 contaminant.fasta.file.postfix=-complete
+output.file.dir=${project.basedir}/target/output/
+peptide.mapping.report.prefix=peptide-protein-mapping-
+peptide.mapping.report.postfix=-test
