--- a/src/main/resources/prop/data-unifier.properties
+++ b/src/main/resources/prop/data-unifier.properties
@@ -10,3 +10,6 @@ contaminant.fasta.file.postfix=-complete
 output.file.dir=/nfs/pride/work/proteomes/data-unifier/output/
 peptide.mapping.report.prefix=peptide-protein-mapping-
 peptide.mapping.report.postfix=
+
+unique.peptide.mapping.report.prefix=unique-peptide-protein-mapping-
+unique.peptide.mapping.report.postfix=
