--- a/src/test/resources/prop/data-unifier-override.properties
+++ b/src/test/resources/prop/data-unifier-override.properties
@@ -7,5 +7,9 @@ contaminant.fasta.file.prefix=contaminant-
 protein.fasta.file.postfix=-test
 contaminant.fasta.file.postfix=-complete
 output.file.dir=${project.basedir}/target/output/
+
 peptide.mapping.report.prefix=peptide-protein-mapping-
 peptide.mapping.report.postfix=-test
+
+unique.peptide.mapping.report.prefix=unique-peptide-protein-mapping-
+unique.peptide.mapping.report.postfix=-test
