--- a/pom.xml
+++ b/pom.xml
@@ -151,25 +151,17 @@
             <version>${proteomes.indexer.version}</version>
         </dependency>
 
-        <!-- uniprot java client beta version. Is using solr 5 so it is not compatible -->
-        <!--<dependency>-->
-            <!--<groupId>uk.ac.ebi.uniprot</groupId>-->
-            <!--<artifactId>japi</artifactId>-->
-            <!--<version>1.0.1</version>-->
-        <!--</dependency>-->
-
+        <!-- uniprot java client version -->
         <dependency>
-            <groupId>uk.ac.ebi.uniprot.kraken</groupId>
-            <artifactId>uniprotjapi</artifactId>
-            <version>RELEASE</version>
+            <groupId>uk.ac.ebi.uniprot</groupId>
+            <artifactId>japi</artifactId>
+            <version>1.0.5</version>
             <exclusions>
+                <!--The version is not compatible with the one
+                that spring batch needs -->
                 <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>commons-codec</groupId>
-                    <artifactId>commons-codec</artifactId>
+                    <groupId>org.jboss.logging</groupId>
+                    <artifactId>jboss-logging</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -177,6 +169,13 @@
         <dependency>
             <groupId>org.springframework.batch</groupId>
             <artifactId>spring-batch-core</artifactId>
+        </dependency>
+
+        <!--Hibernate validator needs this dependency-->
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>2.2.6</version>
         </dependency>
 
         <dependency>
@@ -241,7 +240,7 @@
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-test-framework</artifactId>
-            <version>${solrj.version}</version>
+            <version>${solr}</version>
             <scope>test</scope>
         </dependency>
 
