Adds five new species and updates the scripts for the lsf to run in Java 8

--- a/src/main/resources/prop/release.properties
+++ b/src/main/resources/prop/release.properties
@@ -1,8 +1,18 @@
 reference.database.3702=UP000006548
-reference.database.version.3702=2016_02
+reference.database.version.3702=2016_03
 reference.database.9606=UP000005640
-reference.database.version.9606=2016_02
+reference.database.version.9606=2016_03
 reference.database.10090=UP000000589
-reference.database.version.10090=2016_02
+reference.database.version.10090=2016_03
 reference.database.10116=UP000002494
-reference.database.version.10116=2016_02
+reference.database.version.10116=2016_03
+reference.database.7955=UP000000437
+reference.database.version.7955=2016_03
+reference.database.559292=UP000002311
+reference.database.version.559292=2016_03
+reference.database.284812=UP000002485
+reference.database.version.284812=2016_03
+reference.database.7227=UP000000803
+reference.database.version.7227=2016_03
+reference.database.83333=UP000000625
+reference.database.version.83333=2016_03
