Updates the database pool from apache BasicDataSource to C3P0. Renames resources folder from fasta to proteins and removes gene folder. Adds isoform information.

--- a/src/test/resources/prop/data-unifier-override.properties
+++ b/src/test/resources/prop/data-unifier-override.properties
@@ -1,11 +1,14 @@
-gene.group.file.dir=${project.basedir}/src/test/resources/groups/gene/
-fasta.file.dir=${project.basedir}/src/test/resources/fasta/
+gene.group.file.dir=${project.basedir}/src/test/resources/groups/
+fasta.file.dir=${project.basedir}/src/test/resources/proteins/
 gene.group.file.prefix=gene-groups-
-gene.group.file.postfix=-test
+gene.group.file.postfix=-sorted
 protein.fasta.file.prefix=uniprot-taxonomy-
+protein.fasta.file.postfix=-proteins
 contaminant.fasta.file.prefix=contaminant-
-protein.fasta.file.postfix=-test
 contaminant.fasta.file.postfix=-complete
+isoform.fasta.file.prefix=uniprot-taxonomy-
+isoform.fasta.file.postfix=-isoforms
+
 output.file.dir=${project.basedir}/target/output/
 
 peptide.mapping.report.prefix=peptide-protein-mapping-
