--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                 <directory>src/test/resources</directory>
                 <filtering>true</filtering>
                 <excludes>
-                    <exclude>fasta/**</exclude>
+                    <exclude>proteins/**</exclude>
                     <exclude>groups/**</exclude>
                 </excludes>
             </testResource>
@@ -179,8 +179,8 @@
         </dependency>
 
         <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
         </dependency>
 
         <!--oracle-->
