Adds isoform loader step. Rename properties to take into account the new name of the files.

--- a/src/main/resources/prop/data-unifier.properties
+++ b/src/main/resources/prop/data-unifier.properties
@@ -3,9 +3,11 @@ fasta.file.dir=/nfs/pride/work/proteomes/data-unifier/proteins/
 gene.group.file.prefix=gene-groups-
 gene.group.file.postfix=-sorted
 protein.fasta.file.prefix=uniprot-taxonomy-
-protein.fasta.file.postfix=-complete
+protein.fasta.file.postfix=-proteins
 contaminant.fasta.file.prefix=contaminant-
 contaminant.fasta.file.postfix=-complete
+isoform.fasta.file.prefix=uniprot-taxonomy-
+isoform.fasta.file.postfix=-isoforms
 
 output.file.dir=/nfs/pride/work/proteomes/data-unifier/output/
 peptide.mapping.report.prefix=peptide-protein-mapping-
